--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "dotenv": "^16.4.5",
+    "joi": "^17.13.1",
     "mysql2": "^3.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
