--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "gen-migration": "run-s build && ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate -d ./typeorm.config.ts"
   },
   "dependencies": {
+    "@nestjs/bull": "^10.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "bull": "^4.12.9",
     "dotenv": "^16.4.5",
     "joi": "^17.13.1",
     "mysql2": "^3.10.0",
