--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:run": "ts-node --transpile-only -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d ./typeorm.config.ts",
-    "migration:create": "ts-node --transpile-only -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:create",
-    "migration:revert": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert -d ./typeorm.config.ts",
-    "migrate": "run-s migration:run",
-    "gen-migration": "run-s build && ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate -d ./typeorm.config.ts"
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "migration:run": "yarn run typeorm migration:run -- -d ./src/config/typeorm.config.ts",
+    "migration:generate": "yarn run typeorm -- -d ./src/config/typeorm.config.ts migration:generate ./src/database/migrations/migrations",
+    "migration:create": "yarn run typeorm -- migration:create ./src/database/migrations/migrations",
+    "migration:revert": "yarn run typeorm -- -d ./src/config/typeorm.config.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/bull": "^10.1.1",
@@ -31,6 +31,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "axios": "^1.7.2",
     "bull": "^4.12.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -63,6 +64,7 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
